[package]
name = "ff-stream"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "HLS and DASH adaptive streaming output for the ff-* crate family"
license.workspace = true
readme = "README.md"
repository.workspace = true
keywords = ["video", "ffmpeg", "hls", "dash", "streaming"]
categories = ["multimedia::video", "multimedia::encoding"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ff-sys      = { workspace = true }
ff-common   = { workspace = true }
ff-format   = { workspace = true }
ff-encode   = { workspace = true }
ff-decode   = { workspace = true }
ff-pipeline = { workspace = true }
thiserror   = { workspace = true }
log         = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"

[lints]
workspace = true
