[package]
name = "ff"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "High-level, safe FFmpeg bindings for Rust — the ff-* crate family facade"
license.workspace = true
readme = "README.md"
repository.workspace = true
keywords = ["video", "audio", "ffmpeg", "multimedia", "codec"]
categories = ["multimedia::video", "multimedia::audio", "multimedia::encoding"]

[features]
default = ["probe", "decode", "encode"]
probe    = ["dep:ff-probe"]
decode   = ["dep:ff-decode"]
encode   = ["dep:ff-encode"]
filter   = ["dep:ff-filter"]
pipeline = ["dep:ff-pipeline"]
stream   = ["dep:ff-stream"]

[dependencies]
ff-format = { workspace = true }
ff-common = { workspace = true }
ff-probe    = { workspace = true, optional = true }
ff-decode   = { workspace = true, optional = true }
ff-encode   = { workspace = true, optional = true }
ff-filter   = { workspace = true, optional = true }
ff-pipeline = { workspace = true, optional = true }
ff-stream   = { workspace = true, optional = true }

[lints]
workspace = true
