[package]
name = "ff-encode-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[workspace]

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "encode_video"
path = "fuzz_targets/encode_video.rs"
test = false
doc = false

[dependencies]
libfuzzer-sys = "0.4.12"
ff-encode = { path = ".." }
ff-format = { path = "../../ff-format" }
tempfile = "3.27.0"
